# ChangeLog for dev-ruby/rjb
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  26 Jan 2011; Dean Matzkov <bapa@gentoo.org> rjb-1.3.4-r2.ebuild:
  The 'data' directory is now installed again; turns out it was needed.

*rjb-1.3.4-r2 (26 Jan 2011)

  26 Jan 2011; Dean Matzkov <bapabooiee@gmail.com> +rjb-1.3.4-r2.ebuild:
  Java environment init is now proper. Also some misc cleanup.

  24 Jan 2011; Dean Matzkov <bapabooiee@gmail.com> rjb-1.3.4-r1.ebuild:
  The JAVA_HOME variable is now set using java-config-2.

  24 Jan 2011; Dean Matzkov <bapabooiee@gmail.com> rjb-1.3.4-r1.ebuild:
  Added USE flag to install example files.

  24 Jan 2011; Dean Matzkov <bapabooiee@gmail.com> rjb-1.3.4-r1.ebuild:
  Removed the installation of some useless files, as well as the Japanese
  README.

*rjb-1.3.4-r1 (24 Jan 2011)

  24 Jan 2011; Dean Matzkov <bapabooiee@gmail.com> -rjb-1.3.4.ebuild,
  +rjb-1.3.4-r1.ebuild:
  Revision-bumped with a much cleaner and correct version.

*rjb-1.3.4 (24 Jan 2011)

  24 Jan 2011; Dean Matzkov <bapabooiee@gmail.com> +rjb-1.3.4.ebuild:
  Created the hackiest ebuild in the world, as per the request of Zero_Chaos.

