@@ -1,5 +1,5 @@
 DIST rjb-1.3.4.gem 61440 RMD160 ce0a37cf50508e51e41a9a04260dcab955f97683 SHA1 801c69f2d2c4a638acfa06342a6ded4af2e2ffab SHA256 f756a152130a2ac28e7d50d8dbbf766e03df635b6a513e31de3f2850f0d5abc5
 EBUILD rjb-1.3.4-r1.ebuild 987 RMD160 ca8bd791d3dbc8b777347fcba02a8fa7358cc6d4 SHA1 343e000f8c7c56102d949b05ab778f4ed9ee8fda SHA256 d8ddc804cf47f113a6bb42eaf7bdacb84d9e57b0e55782a44bea6d8a032343d6
-EBUILD rjb-1.3.4-r2.ebuild 965 RMD160 f5fdb92b385795cc252972979edb7fa89dbc6044 SHA1 96da9cd0a68dbdd65006dfbbdbfbf86e7ee5e615 SHA256 a343bebe4f6ac76a8f5e81bf29d7aecc4e075433c05114731d180e860a59ddbd
-MISC ChangeLog 1181 RMD160 172c03ce6841e970ef75e7e9b1b56eab883a3c50 SHA1 1e5c22724f8c408358bfae32bce4abdc6e0c9cca SHA256 dfa2c92effd1d587e54271c6b26082e66271e3d7e0beb929ed049949b2138108
+EBUILD rjb-1.3.4-r2.ebuild 983 RMD160 daf481ac5a95a4c752258d53fdf339a433fa0cf4 SHA1 274b4f08f40428b5d0c587f6d1e31e8b009b7bb7 SHA256 e39a47d4a5e1deed24f7dd26eea7d71220096f13b4069dc431a1bef60bb7e39e
+MISC ChangeLog 1335 RMD160 9c085ab5cb87ff7ea912172e5d85e6b83b9cccbf SHA1 cae62fa47011e5e0388236f1b1859c65523f7495 SHA256 ee2f1d4e867521132854081d4e2b8e5ca009ad1e24942f21aae28f507ef1d11d
 MISC metadata.xml 221 RMD160 52dde43b09fd52c7fca2d101da4536746167b29f SHA1 ce96a105913fc721fb928a0d8216b11fa387b869 SHA256 d114187ee5bb84d05e5d0654deb9148f2b4100c127266eca82b49ba011941616
