@@ -38,12 +38,13 @@ each_ruby_compile() {
 each_ruby_install() {
 	each_fakegem_install
 
-	# currently no elegant way to do this, bug #352765
+	# currently no elegant way to do this (bug #352765)
 	ruby_fakegem_newins ext/rjbcore.so lib/rjbcore.so
 
 	ruby_fakegem_doins -r data
-	
+
 	if use examples; then
-		ruby_fakegem_doins -r samples
+		insinto /usr/share/doc/${PF}
+		doins -r samples
 	fi
 }
